--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mui/lab": "^6.0.0-beta.28",
-    "@mui/material": "^6.4.5",
+    "@mui/lab": "6.0.0-beta.23",
+    "@mui/material": "6.4.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
